<resources>
    <string name="app_name">AcceleratOr</string>
    <string name="settings_button_text">Settings</string>
    <string name="startTrip_button_text">Start Trip</string>
    <string name="stopTrip_button_text">Stop Trip</string>

    <string name="pref_sensorFrequency">Sensor Frequency</string>
    <string name="pref_sensorFrequency_default">20</string>

    <string name="pref_detectionStyle">Detection Style</string>
    <string name="pref_accelerationThreshold">Acceleration Threshold</string>
    <string name="pref_decelerationThreshold">Deceleration Threshold</string>

    <string name="pref_exportDB">Export DB</string>
    <string name="pref_exportDB_summary">Export the database to the root of the phone directory</string>

    <string name="pref_deleteDB">Delete DB</string>
    <string name="pref_deleteDB_summary">Delete the content of the database</string>

    <string name="pref_calibrate">Calibrate Accelerometer</string>
    <string name="pref_calibrate_summary">Calibrate the accelerometer</string>
</resources>
