<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Need: Frequency, Export DB, Delete DB, Calibrate-->
    <EditTextPreference
        android:key="pref_sensorFrequency"
        android:title="@string/pref_sensorFrequency"
        android:dialogTitle="@string/pref_sensorFrequency"
        android:summary="@string/pref_sensorFrequency_summary"
        android:inputType="number"
        android:defaultValue="@string/pref_sensorFrequency_default" />
    <Preference
        android:key="pref_exportDB"
        android:title="@string/pref_exportDB"
        android:summary="@string/pref_exportDB_summary">
    </Preference>
    <Preference
        android:key="pref_deleteDB"
        android:title="@string/pref_deleteDB"
        android:summary="@string/pref_deleteDB_summary">
    </Preference>
</PreferenceScreen>